# browser-agent

./: .gitignore  AGENTS.md  LICENSE.md  README.md  cli.ts  package-lock.json  package.json  run-cli-xvfb.sh  tsconfig.json
assets/: auth-takeover-fixture.html  auth-takeover-fixture.js  dropdown-select-fixture.html  file-picker-fixture.html  google-flights-main.simplified.minified.lexicon.json  google-flights-main.simplified.minified.txt  google-flights-main.simplified.roundtrip.yaml  google-flights-main.simplified.yaml  print-dialog-fixture.html  scroll-css-fixture.html  scroll-lazy-fixture.html  scroll-lazy-fixture.js
runtime/: llm-env.ts
scripts/: build-sdk-binary.mjs  check-sdk-binary.mjs  clean-build-output.mjs  clean-dist.mjs  compile-standalone.ts  package-sdk-artifacts.mjs  print-executor-system-prompt.ts  report-task-outcomes.ts  sdk-platforms.mjs  smoke-sdk-binary.mjs  test-python-sdk.py  test-typescript-sdk.ts  validate-cli-manifest.mjs  verify-npm-packages.mjs  verify-python-wheel.py
sdk/python-sdk/: .gitignore  README.md  hatch_build.py  pyproject.toml
sdk/python-sdk/src/browser_agent/: __init__.py  errors.py  events.py  models.py  options.py  protocol.py  rpc.py  run.py  runtime.py
sdk/python-sdk/tests/: helpers.py  test_errors.py  test_events.py  test_init.py  test_models.py  test_options.py  test_protocol.py  test_rpc.py  test_run.py  test_runtime.py
src/: cli.ts  config-feature-flags.ts  featureFlags.ts  file-workspace.ts  index.ts  llm-capabilities.ts  orchestration-logging.ts  port-allocation.ts  rpc.ts  runtime-options.ts  standalone-cli.ts  (+9 more)
(+281 files in other folders)
